feat(services): refactor the service feature
remove the unnecessary services file. remove unnecessary code comments.
display duration as an integer.

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -27,7 +27,7 @@
 
               <div class="row">
                 <strong>Duration:</strong><br>
-                <%= @service.duration %>
+                <%= @service.duration.round %> day(s)
               </div>
             </div>
 
