feat(Quote): add styling for quote input box

--- a/app/assets/stylesheets/styles/_dashboard.scss
+++ b/app/assets/stylesheets/styles/_dashboard.scss
@@ -208,5 +208,9 @@ nav .nav-wrapper {
     .btn > .material-icons {
       pointer-events: none;
     }
+
+    .quote-value-input {
+      padding: 15px 0;
+    }
   }
 }
