--- a/app/views/notifications/_task_notification.html.erb
+++ b/app/views/notifications/_task_notification.html.erb
@@ -16,7 +16,7 @@
       <p></span> I want this task to be done between <strong><span id="startDate"></span>
     </strong> and <strong><span id="startDate"></span></strong> for the price between
           <strong><span id="lower_bound"></span></strong> and <strong><span id="upper_bound"></span></strong></p>
-  <button id='task_accept' class="btn teal modal-action modal-close" onclick="task_response('active',<%=notification.id%>)">Accept</button>
-  <button id='task_reject' class="btn modal-action modal-close" onclick="task_response('rejected',<%=notification.id%>)">Reject</button>
+  <a href="#!" id='task_accept' class="btn teal modal-action modal-close" onclick="task_response('active',<%=notification.id%>)">Accept</a>
+  <a href="#!" id='task_reject' class="btn modal-action modal-close" onclick="task_response('rejected',<%=notification.id%>)">Reject</a>
 </div>
 </div>
