ft(views): move user input error messages next to erroneous input

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body class="<%= "#{params[:controller]}-#{params[:action]}"%>">
 
-  <%= render "partials/header" unless (current_page?(role_path) || current_page?(new_users_response_path)) %>
+  <%= render "partials/header" unless current_page?(role_path) %>
 
   <%= yield %>
 
