ch(application): replace weak_yes and weak_no with yes and no respectively

--- a/app/views/admin/applicants/edit.html.erb
+++ b/app/views/admin/applicants/edit.html.erb
@@ -35,9 +35,9 @@
         <%= f.radio_button :status,  "4" %>
         <%= f.label :status_4, "Strong No"%>
         <%= f.radio_button :status, "3" %>
-        <%= f.label :status_3, "Weak No" %>
+        <%= f.label :status_3, "No" %>
         <%= f.radio_button :status,  "2" %>
-        <%= f.label :status_2, "Weak Yes"%>
+        <%= f.label :status_2, "Yes"%>
         <%= f.radio_button :status, "1" %>
         <%= f.label :status_1, "Strong Yes" %>
       </div>
