feat(service_ratings): add line to import service_ratings CSS file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "styles/user_plans";
 @import "styles/search";
 @import "styles/services";
+@import "styles/service_ratings";
 @import "styles/tasks";
 @import "styles/profile_meter";
 @import "styles/biddings";
