--- a/app/views/partials/_sidebar_dashboard.html.erb
+++ b/app/views/partials/_sidebar_dashboard.html.erb
@@ -4,6 +4,7 @@
 <li class='side-nav-button  <%= set_active_class(dashboard_path) %>'>
   <%= link_to "Home", dashboard_path %>
 </li>
+
 <li class='side-nav-button  <%= set_active_class(admin_applicants_path) %>'>
   <%= link_to "View Applications", admin_applicants_path  %>
 </li>
@@ -32,6 +33,10 @@
   <%= link_to "Pending Requests", services_path %>
 </li>
 
+<li class="side-nav-button">
+  <%= link_to "Rate Artisan", "/service_ratings/new?service_id=1" %>
+</li>
+
 <% end %>
 
 <li class="side-nav-button <%= set_active_class(biddings_path) %>">
@@ -48,6 +53,9 @@
   <%= link_to "My References", dashboard_references_path %>
 </li>
 
+<li class="side-nav-button">
+  <%= link_to "Rate Tasker", "/service_ratings/new?service_id=1" %>
+</li>
 <% else %>
 
 <li class="side-nav-button <%= set_active_class( map_search_path ) %>">
@@ -59,6 +67,10 @@
 </li>
 
 <% end %>
+
+<li class="side-nav-button <%= set_active_class(service_ratings_path) %>">
+  <%= link_to "View Ratings", service_ratings_path %>
+</li>
 
 <li class="side-nav-button <%= set_active_class( my_tasks_path ) %>">
   <%= link_to "Task logs", my_tasks_path %>
