feat(service_ratings): add margin-bottom specification
implement sticky footer

--- a/app/assets/stylesheets/styles/service_ratings.scss
+++ b/app/assets/stylesheets/styles/service_ratings.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the service_ratings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.service-rating {
+  margin-bottom: auto;
+}
+
 .user-image {
   display: block;
   margin: auto;
