feat(service_rating): render the type and user whose rating is submitted

--- a/app/views/service_ratings/new.html.erb
+++ b/app/views/service_ratings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row container">
+<div class="row container service-rating">
   <div class="col s10 offset-s1 l8 offset-l2 service-rating-row">
     <%= render 'form', service_rating: @service_rating %>
   </div>
