--- a/app/views/service_ratings/index.html.erb
+++ b/app/views/service_ratings/index.html.erb
@@ -2,7 +2,7 @@
   <% unless @average_service_rating.nil? %>
   <div class="col s12 l4 offset-l4 rating-column">
     <div id="average-service-rating" style="margin:auto;"></div>
-    <p class="center" id="average-rating"><%= @average_service_rating %></p>
+    <p class="center" id="average-rating"><%= @average_service_rating.round %></p>
   </div>
   <% else %>
   <div class="col s12 l4 offset-l4">
@@ -17,8 +17,12 @@
           <th data-field="name">SERVICE DESCRIPTION</th>
           <% if current_user.tasker? %>
           <th data-field="name">ARTISAN</th>
+          <% elsif current_user.artisan? %>
+          <th data-field="name">TASKER</th>
           <% else %>
           <th data-field="name">TASKER</th>
+          <th data-field="name">ARTISAN</th>
+          <th data-field="name">CATEGORY</th>
           <% end %>
           <th data-field="name">SKILLSET INVOLVED</th>
           <th data-field="name">RATING</th>
@@ -34,9 +38,19 @@
             <td>
               <%= service_rating.service.artisan.firstname %> <%= service_rating.service.artisan.lastname %>
             </td>
+            <% elsif current_user.artisan? %>
+            <td>
+              <%= service_rating.service.tasker.firstname %> <%= service_rating.service.tasker.lastname %>
+            </td>
             <% else %>
             <td>
               <%= service_rating.service.tasker.firstname %> <%= service_rating.service.tasker.lastname %>
+            </td>
+            <td>
+              <%= service_rating.service.artisan.firstname %> <%= service_rating.service.artisan.lastname %>
+            </td>
+            <td>
+              <%= service_rating.category.capitalize %>
             </td>
             <% end %>
             <td><%= service_rating.service.skillset.name %></td>
