--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-large col s12">
+<div class="container-large col s12" id="questions_index">
   <div class="row">
     <h3 class="center-align">You can view, rank, add, edit and delete questions from this page</h3>
     <% @questions.each do |question| %>
@@ -24,11 +24,11 @@
 
         <li class="chip">
           <% if question.can_select_multiple? %>
-            Multiple Options Selectable
+            Closed: Multiple Options Selectable
           <% elsif question.options.empty? %>
-            Open Text Field
+            Open-ended
           <% else %>
-            Single Option Selectable
+            Closed: Single Option Selectable
           <% end %>
         </li>
 
@@ -42,10 +42,21 @@
       </ul>
 
       <div class="card-action red-text">
-        <%= link_to "Edit", edit_admin_question_path(question), class: "" %>
+        <%= link_to "Edit", edit_admin_question_path(question) %>
         <%= link_to "Move Up", promote_admin_question_path(question), method: :patch %>
         <%= link_to "Move Down", demote_admin_question_path(question), method: :patch %>
-        <%= link_to "Delete", admin_question_path(question), method: :delete, class: "red-text text-accent-2", data: { confirm: "Are you sure you want to delete this question?" } %>
+        <%= link_to "Delete", "#delete_modal_#{question.rank}", class: "modal-trigger red-text text-accent-2" %>
+
+        <div id='<%="delete_modal_#{question.rank}"%>', class="modal">
+          <div class="modal-content black-text center-align">
+            <h4>Are you sure you want to delete this question?</h4>
+          </div>
+          <div class="modal-footer center-align">
+            <%= link_to "Delete", admin_question_path(question), method: :delete %>
+            <%= link_to "Close" %>
+          </div>
+        </div>
+
       </div>
     </div>
     <% end %>
