--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-large col s12" id="questions_index">
   <div class="row">
-    <h3 class="center-align">You can view, rank, add, edit and delete questions from this page</h3>
+    <h3 class="center-align"><strong>You can view, rank, add, edit and delete questions from this page</strong></h3>
     <% @questions.each do |question| %>
     <div class="questions card z-depth-1 hoverable col s12" id="<%=question.rank%>">
       <h5><%= question.question %>
@@ -51,9 +51,15 @@
           <div class="modal-content black-text center-align">
             <h4>Are you sure you want to delete this question?</h4>
           </div>
-          <div class="modal-footer center-align">
-            <%= link_to "Delete", admin_question_path(question), method: :delete %>
-            <%= link_to "Close" %>
+          <div class="modal-footer">
+            <%= link_to "#", class: "btn white-text teal col s6 m6 l6" do %>
+              Close<i class="material-icons right">close</i>
+            <% end %>
+
+            <%= link_to admin_question_path(question), method: :delete, class: "btn white-text red accent-2 col s6 m6 l6" do %>
+              Delete<i class="material-icons right">delete</i>
+            <% end %>
+
           </div>
         </div>
 
