ft(views): add basic form for creating questions

--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -7,6 +7,6 @@
     </div>
     <% end %>
 
-    <%= link_to "Add New Question", new_admin_question_path, class: "btn view-btn left-align" %>
+    <%= link_to "Add New Question", new_admin_question_path, class: "btn view-btn left-align teal" %>
   </div>
 </div>
