--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -3,25 +3,30 @@
 
     <h4 class="row center-align"><strong>Create new question</strong></h4>
 
-
-
     <div class="input-field">
       <%= f.text_field :question %>
       <%= f.label :question, "Question" %>
     </div>
 
     <h5>Options</h5>
+    <%= link_to "#", class: "waves-effect waves-light btn teal small", id: "add_option", onclick: 'addInputBox("")' do %>
+      Add Option<i class="material-icons left">add</i>
+    <% end %>
 
-    <% if @question.options.any? %>
-      <% @question.options.each do |option| %>
-        <div class="input-field">
-          <%= f.label :question, option %>
-          <%= f.text_field :question %>
+    <h6 id="options_prompt">Click on 'ADD OPTION' to add choices for multiple-choice (closed) questions below</h6>
+
+    <div id="question_options" class="row">
+
+      <% @question.options.each_with_index do |option, index| %>
+        <div class="input-field row" id="<%=option%>">
+          <%= text_field_tag "question[options][]", option, class: "col s9 m9 l9" %>
+          <a class='waves-effect waves-light btn red small col s3 m3 l3' onclick='removeInputBox("<%=option%>")'>
+            <i class='material-icons left'>cancel</i>Remove
+          </a>
         </div>
       <% end %>
-    <% else %>
-      <%=  %>
-    <% end %>
+
+    </div>
 
       <h5>Attributes</h5>
 
